--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: bisque;
+  background-color: grey;
 }
 .container {
   max-width: 500px;
@@ -16,12 +16,13 @@ body {
   padding: 30px;
   border-radius: 5px;
   background-image: linear-gradient(
-    to bottom right,
-    rgb(204, 16, 119),
-    rgb(231, 191, 213)
+    to top,
+    black,
+    darkgrey
   );
 }
 .header {
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
